--- a/client/src/components/Timeline.css
+++ b/client/src/components/Timeline.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     border-left: 2px solid #A8A8A8;
     border-right: 2px solid #A8A8A8;
-    height: 100%;
+    min-height: 100%;
     width: 50%;
 }
 .timeline-create-post{
