--- a/client/src/components/Gallery.css
+++ b/client/src/components/Gallery.css
@@ -1,12 +1,15 @@
-.gallery{
-    padding: 10px;
-    width: 90%;
-    height: 90%;
+.gallery-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
 }
 .gallery-images{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 1%;
+    padding: 5%;
 }
 .gallery-image{
     width: 100%;
