--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,7 +1,7 @@
 
 .header-container{
     border-bottom: 2px solid #A8A8A8;
-    width: 100%;
+    min-width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
