--- a/client/src/components/Timeline.css
+++ b/client/src/components/Timeline.css
@@ -1,5 +1,9 @@
 .timeline-container{
     display: flex;
+    justify-content: center;
+}
+.timeline{
+    display: flex;
     flex-direction: column;
     border-left: 2px solid #A8A8A8;
     border-right: 2px solid #A8A8A8;
@@ -10,8 +14,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10%;
     width: 100%;
+    height: 100px;
     border-bottom: 2px solid #A8A8A8;
     cursor: pointer;
     transition: background-color 0.15s;
