--- a/client/src/pages/App.css
+++ b/client/src/pages/App.css
@@ -6,10 +6,8 @@ a{
 .App{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 button{
@@ -32,8 +30,6 @@ button:hover{
 .container{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 100%;
-  height: 100%;
+  min-height:100vh;
 }
