--- a/client/src/components/Post.css
+++ b/client/src/components/Post.css
@@ -1,10 +1,14 @@
+/* The post itself box where content will be displayed */
 .post-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    border-bottom: 2px solid #A8A8A8;
+    border-radius: 15px 0px 0px 15px;
+    background-color: #ffffff;
 }
+
+/* The post title */
 .post-content{
     display: flex;
     flex-direction: column;
