--- a/client/src/components/Timeline.css
+++ b/client/src/components/Timeline.css
@@ -1,21 +1,47 @@
+/*
+::-webkit-scrollbar {
+    width: 1rem;
+}
+::-webkit-scrollbar-track {
+    background-color: #000000ac;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #d1d1d157;
+}
+*/
+
+/* Disables scrollbar */
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* This boxs styles the full timeline of post and also sets a max-height limit so as to not overlap the header. */
 .timeline-container{
     display: flex;
     flex-direction: column;
-    border-left: 2px solid #A8A8A8;
-    border-right: 2px solid #A8A8A8;
     min-height: 100%;
     width: 50%;
+    overflow: auto;
+    max-height: 75vh;
 }
+/* This box styles the "Create Your Post Here" button. */
 .timeline-create-post{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 10%;
     width: 100%;
-    border-bottom: 2px solid #A8A8A8;
     cursor: pointer;
     transition: background-color 0.15s;
+    min-height: 80px;
+    max-height: px;
+    height: 100px;
 }
+
+/* When you hover on previously said button it changes color. */
 .timeline-create-post:hover{
-    background-color: #A8A8A8;
+    background: linear-gradient(45deg,#054a91, #ffffff);
+    border-radius: 5px;
+    margin-bottom: 5px;
+    opacity: 0.9
 }
