--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,8 +1,10 @@
 .footer-container{
     display: flex;
     justify-content: center;
-    border-top: 2px solid #A8A8A8;
     width: 100%;
+    bottom: 0;
+    position: fixed;
+    background-color: #ffffff;
 }
 .footer-container p{
     text-align: center;
