--- a/client/src/components/Timeline.css
+++ b/client/src/components/Timeline.css
@@ -11,36 +11,27 @@
 */
 
 /* Disables scrollbar */
-::-webkit-scrollbar {
-    display: none;
-}
 
 /* This boxs styles the full timeline of post and also sets a max-height limit so as to not overlap the header. */
 .timeline-container{
     display: flex;
-    justify-content: center;
-}
-.timeline{
-    display: flex;
     flex-direction: column;
-    min-height: 100%;
     width: 50%;
+    max-height: 85vh;
+    margin: auto;
     overflow: auto;
-    max-height: 75vh;
 }
+
 /* This box styles the "Create Your Post Here" button. */
 .timeline-create-post{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100px;
-    border-bottom: 2px solid #A8A8A8;
     cursor: pointer;
     transition: background-color 0.15s;
     min-height: 80px;
-    max-height: px;
-    height: 100px;
+    max-height: 120px;
 }
 
 /* When you hover on previously said button it changes color. */
