--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -43,9 +43,8 @@ a[id="profile-link"], a[id="gallery-link"], button[id="logout-button"]{
     border-radius: 5px;
     padding: 10px;
     width: 100px;
-    background: linear-gradient(#054a91, #8b8989);
-    color: white;
     font-size: 16px;
+    transition: 0.2s;
 }
 
 button[id="logout-button"]{
@@ -55,7 +54,6 @@ button[id="logout-button"]{
 
 a[id="profile-link"]{
     margin-left: 20px;
-    ;
 }
 
 a[id="gallery-link"] {
