--- a/client/src/components/Timeline.css
+++ b/client/src/components/Timeline.css
@@ -1,25 +1,25 @@
-/*
-::-webkit-scrollbar {
-    width: 1rem;
-}
-::-webkit-scrollbar-track {
-    background-color: #000000ac;
-}
-::-webkit-scrollbar-thumb {
-    background-color: #d1d1d157;
-}
-*/
 
-/* Disables scrollbar */
 
 /* This boxs styles the full timeline of post and also sets a max-height limit so as to not overlap the header. */
 .timeline-container{
     display: flex;
+    justify-content: center;
+    align-items: center;
+}   
+
+.timeline{
+    display: flex;
     flex-direction: column;
+    align-items: center;
     width: 50%;
-    max-height: 85vh;
-    margin: auto;
+    max-height: 80vh;
     overflow: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.timeline-container::-webkit-scrollbar {
+    display: none;
 }
 
 /* This box styles the "Create Your Post Here" button. */
@@ -29,15 +29,15 @@
     align-items: center;
     width: 100%;
     cursor: pointer;
-    transition: background-color 0.15s;
+    transition: 0.15s;
     min-height: 80px;
     max-height: 120px;
+    background-color: #ffffff;
 }
 
 /* When you hover on previously said button it changes color. */
 .timeline-create-post:hover{
-    background: linear-gradient(45deg,#054a91, #ffffff);
-    border-radius: 5px;
-    margin-bottom: 5px;
-    opacity: 0.9
+    background-color: #ffffff;
+    transform: translate(0, -5px);
+
 }
